# trading_pipeline

./: .application-id  .gitignore  0_aws_pipeline_run.sh  0_aws_pipeline_run_test.sh  0_batch_pipeline.sh  0_local_pipeline_run.sh  1_aws_strategy_run.sh  1_local_strategy_run.sh  1_strategy_run.sh  Dockerfile  README.md  SWEEP.md  TEST_ENVIRONMENT_README.md  TEST_ENVIRONMENT_SETUP.md  TEST_VALIDATION_PLAN.md  batch_control.sh  config.yaml  main.py  notes.txt  pyproject.toml  requirements.txt
data/old_files/: SPY_option_chain.csv
data/raw/: SPY_option_chain.csv
infrastructure/: .spark_conf  .spark_config  1_setup-iam-role.sh  2_deploy-and-submit-sh  2_deploy-and-submit.sh  2_deploy-quick.sh  2_deploy_and_submit.sh  3_submit-job.sh  build_image.sh  deploy_and_submit.sh  env_discovery.sh  setup_iam_role.sh  strategy_run.sh  update_application.sh  watch_job.sh
resources/: config.yaml
resources/scripts/: 2_create-application.sh  3_deploy.sh  4_submit-job.sh  5_watch-job.sh  9_cleanup.sh  deploy-quick.sh  terminate-all.sh
src/: main.py
src/adapters/: adapter_factory.py  base_adapter.py  csv_adapter.py  data_loader.py  parquet_adapter.py  polygen_adapter.py
src/config/: __init__.py  config_manager.py  spark_session.py
src/filters/: __init__.py  base_filter.py  bronze_to_silver_filter.py
src/ingestion/: base_ingestor.py  csv_ingestor.py  ingestor_factory.py  parquet_ingestor.py
src/services/: data_load_orchestrator.py  orchestrator.py  silver_enricher.py  (+1 more)
tests/: inspect_tables.py  regression_dataload.sh  regression_strategy.sh  test_spark.py
(+13 files in other folders)
