[project]
name = "trading-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0,<4.0.0",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "pandas>=2.3.3",
    "streamlit>=1.53.1",
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
    "aioboto3>=15.5.0",
    "boto3>=1.40.61",
    "pyathena[pandas]>=3.25.0",
    "pyarrow>=23.0.0",
    "polars[fsspec,pyarrow]>=1.38.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapters",
            "src/adapters.adapter_factory",
            "src/config",
            "src/models",
            "src/strategies",
            "src/filters",
            "src/utils",
            "src/services",
            "src/transformer"]
